test/corpus/comments.txt
================================================================================
Single line comment
================================================================================

; this is a comment
x = 1

--------------------------------------------------------------------------------

(source_file
  (comment)
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Inline comment
================================================================================

x = 1 ; this is a comment

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal))
  (comment))

================================================================================
Multiple comments
================================================================================

; first comment
; second comment
x = 1

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (assignment
    (identifier)
    (number_literal)))
