test/corpus/control_flow.txt
================================================================================
If then inline
================================================================================

if count lt 1 then print, 'Empty'

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      left: (identifier)
      right: (number_literal))
    (procedure_call
      (identifier)
      (argument_list
        (string_literal)))))

================================================================================
If then else inline
================================================================================

if count gt 0 then x = 1 else x = 0

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      left: (identifier)
      right: (number_literal))
    (assignment
      left: (identifier)
      right: (number_literal))
    (else_clause
      (assignment
        left: (identifier)
        right: (number_literal)))))

================================================================================
If then begin block
================================================================================

if count gt 0 then begin
  total = total + count
  n = n + 1
endif

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      left: (identifier)
      right: (number_literal))
    (body
      (assignment
        left: (identifier)
        right: (binary_expression
          left: (identifier)
          right: (identifier)))
      (assignment
        left: (identifier)
        right: (binary_expression
          left: (identifier)
          right: (number_literal))))))

================================================================================
If then begin else begin block
================================================================================

if count gt 0 then begin
  total = total + count
endif else begin
  total = 0
endelse

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      left: (identifier)
      right: (number_literal))
    (body
      (assignment
        left: (identifier)
        right: (binary_expression
          left: (identifier)
          right: (identifier))))
    (else_clause
      (body
        (assignment
          left: (identifier)
          right: (number_literal))))))

================================================================================
Generic end as block closer
================================================================================

if count gt 0 then begin
  total = total + count
end else begin
  total = 0
end

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      left: (identifier)
      right: (number_literal))
    (body
      (assignment
        left: (identifier)
        right: (binary_expression
          left: (identifier)
          right: (identifier))))
    (else_clause
      (body
        (assignment
          left: (identifier)
          right: (number_literal))))))
