test/corpus/identifiers.txt
================================================================================
Simple identifier
================================================================================

x = value

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (identifier)))

================================================================================
Identifier with dollar sign
================================================================================

result = mds$value

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (identifier)))

================================================================================
Identifier with underscore
================================================================================

my_var = other_var

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (identifier)))

================================================================================
System variable
================================================================================

pi_val = !pi

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (system_variable)))

================================================================================
System variable error state
================================================================================

err = !error_state

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (system_variable)))
