test/corpus/literals.txt
================================================================================
Integer literal
================================================================================

x = 42

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Negative integer
================================================================================

x = -42

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (unary_expression
      (number_literal))))

================================================================================
Long integer
================================================================================

y = 42L

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Long64 integer
================================================================================

z = 42LL

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Unsigned integer
================================================================================

a = 42U

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Unsigned long
================================================================================

b = 42UL

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Float literal
================================================================================

a = 3.14

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Double literal
================================================================================

b = 3.14d0

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Scientific notation float
================================================================================

c = 1e10

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Scientific notation double
================================================================================

d = 1d10

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Float with leading dot
================================================================================

e = .5

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Hex literal
================================================================================

h = '0F'x

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Octal literal
================================================================================

o = '17'o

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Byte literal
================================================================================

bval = 42B

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (number_literal)))
