test/corpus/loops.txt
================================================================================
For loop
================================================================================

for i = 0, n - 1 do begin
  values[i] = compute(i)
endfor

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (identifier)
    (number_literal)
    (binary_expression
      (identifier)
      (number_literal))
    (body
      (assignment
        (subscript_expression
          (identifier)
          (argument_list
            (identifier)))
        (call_expression
          (identifier)
          (argument_list
            (identifier)))))))

================================================================================
For loop inline
================================================================================

for i = 0, 9 do print, i

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (identifier)
    (number_literal)
    (number_literal)
    (procedure_call
      (identifier)
      (argument_list
        (identifier)))))

================================================================================
For loop with step
================================================================================

for i = 0, 100, 2 do begin
  x = i
endfor

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (identifier)
    (number_literal)
    (number_literal)
    (number_literal)
    (body
      (assignment
        (identifier)
        (identifier)))))

================================================================================
While loop
================================================================================
